Upping that z-index to make sure it appears over the gear icon

--- a/app/styles/modules/_word-list.scss
+++ b/app/styles/modules/_word-list.scss
@@ -13,7 +13,7 @@
   left: 19px;
   position: absolute;
   width: 100%;
-  z-index: 2;
+  z-index: 3;
   li:not(:last-of-type) {
     border-bottom: 1px solid #DDD;
   }
